# eps-action-sbom

./: .gitallowed  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  action.yml  check-sbom-issues-against-ignores.sh  entrypoint.sh  ignored_security_issues.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run-sbom-scan.sh  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: pull_request.yml  quality_checks.yml  release.yml  sbom_workflow.yml
node18/: .tool-versions
node20/: .tool-versions
node22/: .tool-versions
test/: .tool-versions  Dockerfile  Makefile  setup.bash  test.bats
test/issues/golang/: go.mod  go.sum_no-check  main.go
test/issues/ignore-java/: ignored_security_issues.json  pom.xml_no-check
test/issues/ignore-npm-issue/: ignored_security_issues.json  package.json_no-check
test/issues/ignore-pip-issue/: ignored_security_issues.json  requirements.txt
test/issues/ignore-poetry-issue/: ignored_security_issues.json  pyproject.toml_no-check  test-pyproject.toml
test/issues/npm-only/: package-lock.json
test/issues/python-poetry-only/: poetry.lock_no-check  pyproject.toml  pyproject.toml_no-check
test/no-issues/golang/: go.mod  main.go
test/no-issues/java/: pom.xml_no-check
test/no-issues/npm-only/: package-lock.json_no-check  package.json  (+2 more)
test/no-issues/npm-plus-poetry/: package-lock.json  package.json  poetry.lock_no-check  pyproject.toml  pyproject.toml_no-check  test-package-lock.json
(+9 files in other folders)
