[tool.poetry]
name = "test-data"
version = "0.1.0"
description = ""
authors = ["Jim Wild <james.wild6@nhs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.15"
flask = "2.3.2"
requests = "2.31.0"
pandas = "2.0.3"
numpy = "1.24.4"
beautifulsoup4 = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
